-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
Linux, Windows
-
4.8: 24398afa413d38c4fc38d09d1a218cf514ed3987, 5.0: 64e0560ff451676fc96dfadd21bef436ac25bb52
The actions of a submenu are useless for RightToLeft layout if the menu is on the right. The actions are placed out of the screen. They should be by default positioned to left with RightToLeft layout and checked that they stay on the available screen area.
The attached example shows the problem.
The fix to https://bugreports.qt.nokia.com//browse/QTBUG-14739 has introduced this bug.